# claude-md-gen

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
claude_md_gen/: api.py  cli.py  generator.py
static/: index.html
tests/: test_api.py  test_generator.py
